2004-04-17 13:11 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/inspectors.m: Added code to the 
	GormTableViewInspector update the background color when
	the user changes it in the inspector.
	* Palettes/3Containers/GormNSTableViewInspector.gorm: added
	color well to allow changing of the background color.
	
2004-04-17 12:52 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormObjectEditor.m: [GormObjectEditor mouseDown:] check
	that "name" is not nil before proceeding into the code to
	do the drag & drop.   This was causing an exception.
	
2004-04-17 10:58 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormNSOutlineView.m: Changed some of
	the default data source's elements to be closer to the actual
	class hierarchy.
	* Palettes/3Containers/inspectors.m: Added code to the 
	GormTableViewInspector to add or delete columns based on the
	new field which specifies the number of columns in the 
	table/outline.
	* Palettes/3Containers/main.m: removed some old code and
	added code to expand the outline view so it looks better
	in the palette.
	* Palettes/3Containers/GormNSTableViewInspector.gorm: added
	"#Columns" field to allow the user to modify the columns in the
	table without cutting/pasting.
	
2004-04-13 20:57 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 0.7.5
	
2004-04-11 21:26 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormBoxEditor.m: Cleaned up warnings.
	* GormImageEditor.m: same..
	* GormInternalViewEditor.m: same..
	* GormTabViewEditor.m: same..
	* GormViewEditor.m: same..
	* GormViewWithContentViewEditor.m: same..
	* Palettes/0Menus/main.m: same..
	* Palettes/3Containers/GormTableViewEditor.m: same..
	* Palettes/3Containers/inspectors.m: same..
	* Palettes/4Data/inspectors.m: same..
	* Palettes/4Data/main.m: same..
	* GormViewKnobs.m: Added reference to new header...
	* GormViewKnobs.h: New header which declares the knob 
	related functions.
	